cluster/apps/monitoring/gammu-sms-gateway/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gammu-sms-gateway
  namespace: monitoring
  annotations:
    coredns.io/hostname: "sms.${SECRET_DOMAIN}"
    cert-manager.io/cluster-issuer: letsencrypt-production
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: traefik
  rules:
    - host: "sms.${SECRET_DOMAIN}"
      http:
        paths:
          - backend:
              service:
                name: gammu-sms-gateway
                port:
                  number: 8080
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - "sms.${SECRET_DOMAIN}"
      secretName: ${SECRET_DOMAIN}-tls
